<resources>
    <string name="app_name">OBD Driving</string>
    <string name="title_main">Inicio</string>
    <string name="title_home">Mi Calificación</string>
    <string name="title_menu">Menú</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dcp">Digital Car Platform</string>
    <string name="home_title">Tu promedio de manejo es:</string>
    <string name="collect_data_title">Estamos recolectando tus datos...</string>
    <string name="collect_data_subtitle">El proceso es automático. Solo conduce con responsabilidad.</string>
    <string name="subtitle_connect">Para empezar, conéctate vía Bluetooth a tu OBD.</string>
    <string name="subtitle_start_trip">Para empezar un nuevo viaje, presiona el botón INICIAR VIAJE.</string>
    <string name="subtitle_end_trip">Para finalizar el viaje, presiona el botón TERMINAR VIAJE.</string>
    <string name="btn_connect">CONECTAR</string>
    <string name="btn_start_trip">INICIAR\nVIAJE</string>
    <string name="btn_end_trip">TERMINAR\nVIAJE</string>
    <string name="alert">Alerta</string>
    <string name="notice">Atención</string>
    <string name="alert_cancel_collect">¿Estás seguro que deseas finalizar tu viaje?.</string>
    <string name="alert_end_trip">Estamos procesando los datos de tu viaje. \n Actualiza en unos segundos.</string>
    <string name="alert_score_updated">Tu score ha sido actualizado!</string>

    <string name="my_trips_empty">Aún no has realizado viajes.</string>

    <string name="duration">Duración</string>
    <string name="score">Score</string>
    <string name="distance">Distancia</string>
    <string name="start">Inicio</string>
    <string name="end">Fin</string>
    <string name="events">Eventos</string>
    <string name="speed">Velocidad</string>
    <string name="hour">Hora</string>

    <dimen name="paddingTripDetail">5dp</dimen>
    <dimen name="paddingTripDetailEvents">0dp</dimen>

    <!-- LOGIN -->
    <string name="username">Email</string>
    <string name="password">Contraseña</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="login_register">¿No tienes una cuenta? Registrate ahora.</string>


    <string name="name">Nombres</string>
    <string name="lastname">Apellidos</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="register_subtitle">Registro de usuarios</string>
    <string name="btn_register">Registrarse</string>
    <string name="message_fields_filled">Debe llenar todos los campos.</string>
    <string name="message_passwords_repeat">Las contraseñas deben ser iguales.</string>
    <string name="message_email_valid">Debe ingresar un correo válido.</string>

    <string name="alert_logout">¿Estás seguro que deseas salir?</string>

    <string name="notifications_admin_channel_id">01</string>
    <string name="notifications_admin_channel_name">Canal 01</string>
    <string name="notifications_admin_channel_description">Canal principal</string>

    <string name="no_network">Debe conectarse a una red.</string>
    <string name="no_connection">Hay problemas con su señal de internet. Inténtelo nuevamente.</string>
    <string name="connection_exception">Ocurrió un problema. Inténtelo en unos minutos.</string>


    <string name="configOption1">Cambiar OBD emparejado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
