<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorToolbar"
            app:titleTextColor="#fff"
            app:subtitleTextColor="#f5fbff"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:padding="1dp"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background2"
            tools:context=".ui.activity.MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="46dp"
                    style="@style/tvScreenTitle"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/tv_home_title"
                    android:visibility="invisible"
                    android:text="@string/dcp"/>

                <com.mdp.innovation.obd_driving.util.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_home_title"
                    android:layout_marginTop="96dp"
                    style="@style/tvScreenSubTitle"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/tv_home_subtitle"
                    android:text="@string/subtitle_connect"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_home_subtitle"
                    android:layout_marginTop="26dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/btn_connect"
                    android:textColor="#4153ab"
                    app:backgroundTint="#FFF"/>

        </android.support.constraint.ConstraintLayout>

</LinearLayout>
