<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".ui.activity.InitialActivity">



    <com.mdp.innovation.obd_driving.util.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cl_item_container"
            android:layout_marginBottom="20dp"
            android:textColor="#FFF"
            android:tag="2"
            android:textSize="28dp"
            android:id="@+id/register_subtitle"
            android:text="@string/register_subtitle"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_item_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
        >

        <android.support.design.widget.TextInputLayout
                android:id="@+id/et_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/LoginHintText"
                android:theme="@style/LoginHintText"
                app:errorTextAppearance="@style/etError"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.mdp.innovation.obd_driving.util.CustomEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:textColor="#FFF"
                    android:backgroundTint="#FFF"
                    android:textColorHint="#FFF"
                    android:singleLine="true"
                    android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/et_lastname_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/LoginHintText"
                android:theme="@style/LoginHintText"
                app:errorTextAppearance="@style/etError"
                app:layout_constraintTop_toBottomOf="@+id/et_name_layout"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.mdp.innovation.obd_driving.util.CustomEditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:textColor="#FFF"
                    android:backgroundTint="#FFF"
                    android:textColorHint="#FFF"
                    android:singleLine="true"
                    android:hint="@string/lastname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/et_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/LoginHintText"
                android:theme="@style/LoginHintText"
                app:errorTextAppearance="@style/etError"
                app:layout_constraintTop_toBottomOf="@+id/et_lastname_layout"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.mdp.innovation.obd_driving.util.CustomEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:textColor="#FFF"
                    android:backgroundTint="#FFF"
                    android:textColorHint="#FFF"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:hint="@string/username" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/et_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/LoginHintText"
                android:theme="@style/LoginHintText"
                app:errorTextAppearance="@style/etError"
                app:layout_constraintTop_toBottomOf="@+id/et_email_layout"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.mdp.innovation.obd_driving.util.CustomEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:textColor="#FFF"
                    android:backgroundTint="#FFF"
                    android:textColorHint="#FFF"
                    android:singleLine="true"
                    android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/et_rep_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/LoginHintText"
                android:theme="@style/LoginHintText"
                app:errorTextAppearance="@style/etError"
                app:layout_constraintTop_toBottomOf="@+id/et_password_layout"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent=".5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.mdp.innovation.obd_driving.util.CustomEditText
                    android:id="@+id/et_rep_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:textColor="#FFF"
                    android:backgroundTint="#FFF"
                    android:textColorHint="#FFF"
                    android:singleLine="true"
                    android:hint="@string/repeat_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_rep_password_layout"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/btn_register"
                android:fontFamily="@font/titilliumweb_regular"
                android:textColor="@color/colorToolbar"
                app:backgroundTint="#FFF"/>


    </android.support.constraint.ConstraintLayout>

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_item_container"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="#FFF"
            android:src="@drawable/ic_car_multiple"
    />

    <RelativeLayout
            android:id="@+id/loading"
            android:translationZ="2dp"
            android:clickable="true"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgrondDarkTransparent"
            android:gravity="center">

        <ProgressBar
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:theme="@style/AppTheme.BlueAccent"
        />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>